--- a/themes/empty_theme/config.toml
+++ b/themes/empty_theme/config.toml
@@ -1,5 +1,5 @@
-title = "oisín's site"
-baseURL = 'https://oisindavey.github.io'
+title = "Marina's site"
+baseURL = 'https://marinacsado.github.io'
 languageCode = 'en-us'
 
 [params]
